pretty output for df

--- a/toronto_neighborhoods.ipynb
+++ b/toronto_neighborhoods.ipynb
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-05-20 09:49:37--  https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\n",
+      "--2019-05-20 09:55:21--  https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\n",
       "Resolving en.wikipedia.org (en.wikipedia.org)... 103.102.166.224\n",
       "Connecting to en.wikipedia.org (en.wikipedia.org)|103.102.166.224|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
@@ -56,7 +56,7 @@
       "\n",
       "canada_postal_code. 100%[===================>]  77.17K  --.-KB/s    in 0.1s    \n",
       "\n",
-      "2019-05-20 09:49:38 (762 KB/s) - ‘canada_postal_code.xml’ saved [79026/79026]\n",
+      "2019-05-20 09:55:22 (635 KB/s) - ‘canada_postal_code.xml’ saved [79026/79026]\n",
       "\n"
      ]
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,16 +96,16 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: folium in /usr/local/lib/python3.7/site-packages (0.8.2)\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.7/site-packages (from folium) (1.12.0)\n",
       "Requirement already satisfied: branca>=0.3.0 in /usr/local/lib/python3.7/site-packages (from folium) (0.3.1)\n",
-      "Requirement already satisfied: jinja2 in /usr/local/lib/python3.7/site-packages (from folium) (2.10)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.7/site-packages (from folium) (1.15.4)\n",
       "Requirement already satisfied: requests in /Users/tungdam/Library/Python/3.7/lib/python/site-packages (from folium) (2.21.0)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.7/site-packages (from jinja2->folium) (1.1.0)\n",
+      "Requirement already satisfied: numpy in /usr/local/lib/python3.7/site-packages (from folium) (1.15.4)\n",
+      "Requirement already satisfied: six in /usr/local/lib/python3.7/site-packages (from folium) (1.12.0)\n",
+      "Requirement already satisfied: jinja2 in /usr/local/lib/python3.7/site-packages (from folium) (2.10)\n",
       "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/tungdam/Library/Python/3.7/lib/python/site-packages (from requests->folium) (1.24.1)\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.7/site-packages (from requests->folium) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/tungdam/Library/Python/3.7/lib/python/site-packages (from requests->folium) (2.8)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/tungdam/Library/Python/3.7/lib/python/site-packages (from requests->folium) (2018.11.29)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/tungdam/Library/Python/3.7/lib/python/site-packages (from requests->folium) (2.8)\n"
+      "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.7/site-packages (from jinja2->folium) (1.1.0)\n"
      ]
     }
    ],
@@ -538,27 +538,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-05-20 09:49:45--  https://cocl.us/Geospatial_data\n",
+      "--2019-05-20 09:55:28--  https://cocl.us/Geospatial_data\n",
       "Resolving cocl.us (cocl.us)... 161.202.50.39\n",
       "Connecting to cocl.us (cocl.us)|161.202.50.39|:443... connected.\n",
       "HTTP request sent, awaiting response... 301 Moved Permanently\n",
       "Location: https://ibm.box.com/shared/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
-      "--2019-05-20 09:49:46--  https://ibm.box.com/shared/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
+      "--2019-05-20 09:55:31--  https://ibm.box.com/shared/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
       "Resolving ibm.box.com (ibm.box.com)... 103.116.4.197\n",
       "Connecting to ibm.box.com (ibm.box.com)|103.116.4.197|:443... connected.\n",
       "HTTP request sent, awaiting response... 301 Moved Permanently\n",
       "Location: /public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
-      "--2019-05-20 09:49:47--  https://ibm.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
+      "--2019-05-20 09:55:32--  https://ibm.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
       "Reusing existing connection to ibm.box.com:443.\n",
       "HTTP request sent, awaiting response... 301 Moved Permanently\n",
       "Location: https://ibm.ent.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
-      "--2019-05-20 09:49:47--  https://ibm.ent.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
-      "Resolving ibm.ent.box.com (ibm.ent.box.com)... 103.116.4.211\n",
-      "Connecting to ibm.ent.box.com (ibm.ent.box.com)|103.116.4.211|:443... connected.\n",
+      "--2019-05-20 09:55:32--  https://ibm.ent.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
+      "Resolving ibm.ent.box.com (ibm.ent.box.com)... 107.152.24.211, 107.152.25.211\n",
+      "Connecting to ibm.ent.box.com (ibm.ent.box.com)|107.152.24.211|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://public.boxcloud.com/d/1/b1!bHI77scgrfA6AxgupsbRuCCo4qZb3PgOd9ECew4_6FEPADxW7hYDyhifuwtamTXOeRRgIDYCbp6FO7hbp9ftFOEbdc7vKMW3ZbmzUlDQ3-WL_pTIl7uwyDBPkF44WSdaem1tpyHcWbiXNMOgLtQibNy3i13BXG0HjZaqkRebYzpr1g49C7VJapZsfu4Ps5xjnyjiLyYFfLnAQCvZWvsqslvUaF7SiWBFSEJ_33alquIEtEMp09SpxJVqECkZR1x06p8ASPzUIw15AKdvURz3h-l7A2zlDTi1kb6AU5bx8k6Lv_i3QQVic40HJV2RSpQuizLMRP4xhMWGZ4xvskGfNEOAgr5f2P1ZI2HgPCkKRFcZS0fnU9BIyq_GU4hHiuADglXlPjsqcy27Abn0YNb4V0w4F7VdXqMBh-LmbwEyuBEVfGerxyUEaTJKdwD3ar0EHIh0Ln366WiuIY3tgzYIWVppJupA7tdlKfLcUswQSO3i6a44Pe99HBHAWs62u-cx3Un98PAtE4u1QHzRFHUmfAsW3_hj3KsoDcCRJWZYPM7Q41FHifAm9YJjCowCWoyz0Jc79hER_K3HDlk5MBLj_bmW0iwx5XpkZxyZLeueFr3EzgBajVPAI-txHNePfM_K-GaTrTM3GYkRUmkTrOPkMrulrD0A_LXjBZRk5vC2h_axy872nby1GABu-j55HvTselXwHjIq9Yy8N9kZrbJCTnNmqSAvP7wjRPBnoGoAcV_eFXxBukMngjAqQuCH-lfROfIvVS7M_qzvP6qn9r2SrjqTUIUpfCqmqqjGIb1E9io2Nk-de0YJsBn9Po6XjXCi5XBEFwDX-D4YRadgYer6901ycBpS84-xGCrgECWrXVU5N0FHmHZFuKpwqBuKcHMFPCnYCcS9LnYP0ekJFkWU-Wtble3LUHINvQ0m1tHBcxceou2jPXLn6LdbUJaDaCYPubuH1fuiEeWDgtBaYkxb9RXzxM2CSn8ArR32nDlchPQm40V26GSvQMxxtAzJ_vVBJUUBJOnDGuzpm8QY_hFsLp6sk9qymp1uDklfzP3MHs2MKeFnBAb1WmPR-GIKWZo5ic0AKqAxrnfgkk_CyUPYWpPZaXSs5g3L65YEGba9hQKVz-MzM4m9T2BPaZh-qiQoAZ-AfLbx4GRblF_EpS156OjaMi9Un7ZRKJpIZf8xginZ2W_fKqppXDqxe-7T9PVYFqLZj_A0EHcw9SzVfKTYDWQujNdLi6BxJEAMQ-lnkgyFJHpDS_cAFzPUZcilGmpLx4eB3dRtzWpg8fwtnTfJFvwBi2EzRdBCmam-IYDP6h7r3wyPuDe93MZ89V-ozIsjT7_tbimzYhFstj6SgT_G1vc-7TDlAF-YvVxJdF8wlhlyPs8YlyoWqA../download [following]\n",
-      "--2019-05-20 09:49:48--  https://public.boxcloud.com/d/1/b1!bHI77scgrfA6AxgupsbRuCCo4qZb3PgOd9ECew4_6FEPADxW7hYDyhifuwtamTXOeRRgIDYCbp6FO7hbp9ftFOEbdc7vKMW3ZbmzUlDQ3-WL_pTIl7uwyDBPkF44WSdaem1tpyHcWbiXNMOgLtQibNy3i13BXG0HjZaqkRebYzpr1g49C7VJapZsfu4Ps5xjnyjiLyYFfLnAQCvZWvsqslvUaF7SiWBFSEJ_33alquIEtEMp09SpxJVqECkZR1x06p8ASPzUIw15AKdvURz3h-l7A2zlDTi1kb6AU5bx8k6Lv_i3QQVic40HJV2RSpQuizLMRP4xhMWGZ4xvskGfNEOAgr5f2P1ZI2HgPCkKRFcZS0fnU9BIyq_GU4hHiuADglXlPjsqcy27Abn0YNb4V0w4F7VdXqMBh-LmbwEyuBEVfGerxyUEaTJKdwD3ar0EHIh0Ln366WiuIY3tgzYIWVppJupA7tdlKfLcUswQSO3i6a44Pe99HBHAWs62u-cx3Un98PAtE4u1QHzRFHUmfAsW3_hj3KsoDcCRJWZYPM7Q41FHifAm9YJjCowCWoyz0Jc79hER_K3HDlk5MBLj_bmW0iwx5XpkZxyZLeueFr3EzgBajVPAI-txHNePfM_K-GaTrTM3GYkRUmkTrOPkMrulrD0A_LXjBZRk5vC2h_axy872nby1GABu-j55HvTselXwHjIq9Yy8N9kZrbJCTnNmqSAvP7wjRPBnoGoAcV_eFXxBukMngjAqQuCH-lfROfIvVS7M_qzvP6qn9r2SrjqTUIUpfCqmqqjGIb1E9io2Nk-de0YJsBn9Po6XjXCi5XBEFwDX-D4YRadgYer6901ycBpS84-xGCrgECWrXVU5N0FHmHZFuKpwqBuKcHMFPCnYCcS9LnYP0ekJFkWU-Wtble3LUHINvQ0m1tHBcxceou2jPXLn6LdbUJaDaCYPubuH1fuiEeWDgtBaYkxb9RXzxM2CSn8ArR32nDlchPQm40V26GSvQMxxtAzJ_vVBJUUBJOnDGuzpm8QY_hFsLp6sk9qymp1uDklfzP3MHs2MKeFnBAb1WmPR-GIKWZo5ic0AKqAxrnfgkk_CyUPYWpPZaXSs5g3L65YEGba9hQKVz-MzM4m9T2BPaZh-qiQoAZ-AfLbx4GRblF_EpS156OjaMi9Un7ZRKJpIZf8xginZ2W_fKqppXDqxe-7T9PVYFqLZj_A0EHcw9SzVfKTYDWQujNdLi6BxJEAMQ-lnkgyFJHpDS_cAFzPUZcilGmpLx4eB3dRtzWpg8fwtnTfJFvwBi2EzRdBCmam-IYDP6h7r3wyPuDe93MZ89V-ozIsjT7_tbimzYhFstj6SgT_G1vc-7TDlAF-YvVxJdF8wlhlyPs8YlyoWqA../download\n",
-      "Resolving public.boxcloud.com (public.boxcloud.com)... 107.152.24.200, 107.152.25.200\n",
+      "Location: https://public.boxcloud.com/d/1/b1!9nfOrxkoid34aTIBFb7lEkreKt42E1utLSUEtCSqALIlIMCZw7aRMyp8MDJWR_EsEL2NowiOTTMao8EDYXQEGE1IXm-MS0iPl73pxeq-7tQnoOTdnhx6APvakDaATOGg2_j946zgICiNhCiaJWYWhoBnYlvcXfFNVvaqQTqmpweZnScZmwwu-qPUsRgZZtAIIqdwAZmpDFbgbPujUjHJ0IXBxKIafHRQWFam5Ld6OwGa1QjKL80rGdPEAjOL44fZ54GbVJ8CimmXL_36Ikt5Dwhynsx6cardx-pakpmJegvrh3AVxjDckZWRqJBs3Qxq-XEtRBiBEYqV6wMwXonJtmDlWXjtQ-bV0hMoP7acPaBgK4rh7tsB6xMvbM5ndZ2d217euh19B9Dg51T9PbI6c7zYA0ssnwmiwxshqrSRkM6dFd87OxdW06j_QfHMIsCi8IFo1jVbuZrBM7Ewpbr_nUfloWOzkvmFc7igVz_HG5XVLN1DTT9zH6OZHfYNhvUqB4yd5w605QeatdOBAbPhNKj1_1ZmeBIvnHVWUrM9NBB2oWHH15n6KZWYrydhD0-AisG1BTyC00piy3RCRXPWRvi_KNkMm8QQRl6DZRW1eALdIXrv9oSNez-uxFmCsQzqplQ5VrbLDnsDVEwy3gfIJWEV4uC2ghC6F0zhFuSXhs64xw30fR2fFBXe6Dc-7wSObxtw0JgSM_oalvkaLYZDcamnJKF9laN4TbOfQYA4aB5IzfQdOe-7WjdT23qlDOFANYAF792J15BzJUzVpKbiLiyvrihjfYJ7MS9Qo0u4rWSdRmeok8NiSW6AQBjJ4pQnbUSWZ4nG-ZNWXJJSx7SokefrfJRSIrV78l5B0hRc918Nr9dhV2e23tTRUD7Igtp-LhREUcv5WPh6XsC6IriqZO-iorOqeFUzNS3b9Ec2Dw9sFqnPUt2vq182qZbsoKsxIZIWNv_0fTfrbURspHnrCuGDwn91uXIYjC-O_Vn-LIdf6s02acgC1R8T30recQKckZptv8HMvB8khSFEhQNtgNAzUPvPv_TXWwzDErR-RwjZOoGLd7K7yVXL6UHHJ58iGyb6T68-F1GPm-_plPlhOHPHrQZBsdSgjeDecbJ8xCrqOZJMHaDMzJrxtGjxW_pJBC3BGSFqwDCpzNQmMZ9NJAG3oPq8N0fYbomHz5vlvmct_fPvdwQ3GkLHJYYuW7JMInxFxbag-RVQBS2ImqP-gqe9qCe-NFEFdqINl-y2JPmhQHj62seRWH6HPKqf3ObMCJJ4tjgq5hjW3UdhS6UgnZxk3yJ29KBvptX_Gxb8DqwTNGnDnnQyIxBOUyD1NgOig-sO33fFThLVPEoG4pb_S9sT7RlElbt0fsLV9E1JRnCaPNYDQRV8JAFROg../download [following]\n",
+      "--2019-05-20 09:55:34--  https://public.boxcloud.com/d/1/b1!9nfOrxkoid34aTIBFb7lEkreKt42E1utLSUEtCSqALIlIMCZw7aRMyp8MDJWR_EsEL2NowiOTTMao8EDYXQEGE1IXm-MS0iPl73pxeq-7tQnoOTdnhx6APvakDaATOGg2_j946zgICiNhCiaJWYWhoBnYlvcXfFNVvaqQTqmpweZnScZmwwu-qPUsRgZZtAIIqdwAZmpDFbgbPujUjHJ0IXBxKIafHRQWFam5Ld6OwGa1QjKL80rGdPEAjOL44fZ54GbVJ8CimmXL_36Ikt5Dwhynsx6cardx-pakpmJegvrh3AVxjDckZWRqJBs3Qxq-XEtRBiBEYqV6wMwXonJtmDlWXjtQ-bV0hMoP7acPaBgK4rh7tsB6xMvbM5ndZ2d217euh19B9Dg51T9PbI6c7zYA0ssnwmiwxshqrSRkM6dFd87OxdW06j_QfHMIsCi8IFo1jVbuZrBM7Ewpbr_nUfloWOzkvmFc7igVz_HG5XVLN1DTT9zH6OZHfYNhvUqB4yd5w605QeatdOBAbPhNKj1_1ZmeBIvnHVWUrM9NBB2oWHH15n6KZWYrydhD0-AisG1BTyC00piy3RCRXPWRvi_KNkMm8QQRl6DZRW1eALdIXrv9oSNez-uxFmCsQzqplQ5VrbLDnsDVEwy3gfIJWEV4uC2ghC6F0zhFuSXhs64xw30fR2fFBXe6Dc-7wSObxtw0JgSM_oalvkaLYZDcamnJKF9laN4TbOfQYA4aB5IzfQdOe-7WjdT23qlDOFANYAF792J15BzJUzVpKbiLiyvrihjfYJ7MS9Qo0u4rWSdRmeok8NiSW6AQBjJ4pQnbUSWZ4nG-ZNWXJJSx7SokefrfJRSIrV78l5B0hRc918Nr9dhV2e23tTRUD7Igtp-LhREUcv5WPh6XsC6IriqZO-iorOqeFUzNS3b9Ec2Dw9sFqnPUt2vq182qZbsoKsxIZIWNv_0fTfrbURspHnrCuGDwn91uXIYjC-O_Vn-LIdf6s02acgC1R8T30recQKckZptv8HMvB8khSFEhQNtgNAzUPvPv_TXWwzDErR-RwjZOoGLd7K7yVXL6UHHJ58iGyb6T68-F1GPm-_plPlhOHPHrQZBsdSgjeDecbJ8xCrqOZJMHaDMzJrxtGjxW_pJBC3BGSFqwDCpzNQmMZ9NJAG3oPq8N0fYbomHz5vlvmct_fPvdwQ3GkLHJYYuW7JMInxFxbag-RVQBS2ImqP-gqe9qCe-NFEFdqINl-y2JPmhQHj62seRWH6HPKqf3ObMCJJ4tjgq5hjW3UdhS6UgnZxk3yJ29KBvptX_Gxb8DqwTNGnDnnQyIxBOUyD1NgOig-sO33fFThLVPEoG4pb_S9sT7RlElbt0fsLV9E1JRnCaPNYDQRV8JAFROg../download\n",
+      "Resolving public.boxcloud.com (public.boxcloud.com)... 107.152.24.200\n",
       "Connecting to public.boxcloud.com (public.boxcloud.com)|107.152.24.200|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 2891 (2.8K) [text/csv]\n",
@@ -566,7 +566,7 @@
       "\n",
       "Geospatial_data     100%[===================>]   2.82K  --.-KB/s    in 0s      \n",
       "\n",
-      "2019-05-20 09:49:49 (88.9 MB/s) - ‘Geospatial_data’ saved [2891/2891]\n",
+      "2019-05-20 09:55:35 (55.1 MB/s) - ‘Geospatial_data’ saved [2891/2891]\n",
       "\n"
      ]
     }
@@ -702,42 +702,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  PostCode          Borough                    Neighborhood   Latitude  \\\n",
-      "0      M4E     East Toronto                     The Beaches  43.676357   \n",
-      "1      M4K     East Toronto    The Danforth West, Riverdale  43.679557   \n",
-      "2      M4L     East Toronto  The Beaches West, India Bazaar  43.668999   \n",
-      "3      M4M     East Toronto                 Studio District  43.659526   \n",
-      "4      M4N  Central Toronto                   Lawrence Park  43.728020   \n",
-      "\n",
-      "   Longitude  \n",
-      "0 -79.293031  \n",
-      "1 -79.352188  \n",
-      "2 -79.315572  \n",
-      "3 -79.340923  \n",
-      "4 -79.388790  \n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostCode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M4E</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>The Beaches</td>\n",
+       "      <td>43.676357</td>\n",
+       "      <td>-79.293031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4K</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>The Danforth West, Riverdale</td>\n",
+       "      <td>43.679557</td>\n",
+       "      <td>-79.352188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M4L</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>The Beaches West, India Bazaar</td>\n",
+       "      <td>43.668999</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M4M</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>Studio District</td>\n",
+       "      <td>43.659526</td>\n",
+       "      <td>-79.340923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M4N</td>\n",
+       "      <td>Central Toronto</td>\n",
+       "      <td>Lawrence Park</td>\n",
+       "      <td>43.728020</td>\n",
+       "      <td>-79.388790</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(38, 5)"
+       "  PostCode          Borough                    Neighborhood   Latitude  \\\n",
+       "0      M4E     East Toronto                     The Beaches  43.676357   \n",
+       "1      M4K     East Toronto    The Danforth West, Riverdale  43.679557   \n",
+       "2      M4L     East Toronto  The Beaches West, India Bazaar  43.668999   \n",
+       "3      M4M     East Toronto                 Studio District  43.659526   \n",
+       "4      M4N  Central Toronto                   Lawrence Park  43.728020   \n",
+       "\n",
+       "   Longitude  \n",
+       "0 -79.293031  \n",
+       "1 -79.352188  \n",
+       "2 -79.315572  \n",
+       "3 -79.340923  \n",
+       "4 -79.388790  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "toronto_data=full_df[full_df['Borough'].str.find(\"Toronto\") > -1].reset_index(drop=True)\n",
-    "print(toronto_data.head(5))\n",
+    "toronto_data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Shape of dataframe with lat-long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(38, 5)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "toronto_data.shape"
    ]
   },
@@ -838,19 +928,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Make sure you fill in your foursquare API credentials above or this will fail"
+    "#### Make sure you fill in your foursquare API credentials above or this will fail !!!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It looks like you forgot filling your foursquare API credentials\n"
+     "ename": "KeyError",
+     "evalue": "'groups'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-98262579546f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m toronto_venues = getNearbyVenues(names=toronto_data['Neighborhood'],\n\u001b[1;32m      2\u001b[0m                                    \u001b[0mlatitudes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoronto_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Latitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m                                    \u001b[0mlongitudes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoronto_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Longitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m                                   )\n",
+      "\u001b[0;32m<ipython-input-15-79e185ccc434>\u001b[0m in \u001b[0;36mgetNearbyVenues\u001b[0;34m(names, latitudes, longitudes, radius)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;31m# make the GET request\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"response\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'groups'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;31m# return only relevant information for each nearby venue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'groups'"
      ]
     }
    ],
