added some info about cluster result

--- a/toronto_neighborhoods.ipynb
+++ b/toronto_neighborhoods.ipynb
@@ -1174,11 +1174,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The clustering method doesn't work very well somehow, as we still some outliers ( 2 nodes in the same cluster which is far from each other ). "
+   ]
   }
  ],
  "metadata": {
