--- a/Toronto_restaurant_location_analysis.ipynb
+++ b/Toronto_restaurant_location_analysis.ipynb
@@ -29,14 +29,14 @@
     "\n",
     "It should be easy for people to get there by different kinds of transportation methods. Your customer base will be bigger if you have this advantage. Even when you own a car, you still want to use public transportation service sometimes to avoid the parking issue ( or you're just too lazy ). \n",
     "\n",
-    "On the other side, talking about accessibility, a restaurant should be in a convenient place for their supplier as well. You don't wayt to cross half way around the city to buy some basic ingredients. \n",
+    "On the other side, talking about accessibility, a restaurant should be in a convenient place for their supplier ( Eg: raw material ) as well. You don't want to cross half way around the city to buy some basic ingredients in urgent case. \n",
     "\n",
     "#### c. Parking lot issue\n",
     "\n",
     "Very important. No matter how good your the food is, If I have to spend more than 15 mins to find the parking lot or walk for more 500m before entering your restaurant, I'll be very annoying after all. \n",
     "A place near by a parking lot is perfect but a neighbor hotel should be ok to make a deal with you to share their parking service. \n",
     "\n",
-    "#### d. Potential customer base nearly \n",
+    "#### d. Potential customer base nearby\n",
     "\n",
     "A restaurant which server dinner ( casual or fine ) should be close to residence area. Bistro should be close to office. Crowded places like metro, train station, bus stop..are good places for fast food. \n",
     "Or after all, in general, more people, more traffic, more chances that someone will visit your restaurent. You definitely don't want to open your restaurant in a cave. \n",
