--- a/Toronto_restaurant_location_analysis.ipynb
+++ b/Toronto_restaurant_location_analysis.ipynb
@@ -55,15 +55,14 @@
    "source": [
     "# 2. Propose solution by using foursquare location database\n",
     "\n",
-    "Follow our previous research about [Toronto neighborhood](https://github.com/kembox/Coursera_Capstone/blob/master/toronto_neighborhoods.ipynb) , we'll reuse location data for Toronto borough/neighborhood to feed to foursquare [search API](https://developer.foursquare.com/docs/api/venues/search)  to get following info for each area ( borough that has its own postal code ): \n",
+    "Follow our previous research about [Toronto neighborhood](https://github.com/kembox/Coursera_Capstone/blob/master/toronto_neighborhoods.ipynb) , we'll reuse location data for Toronto borough/neighborhood to feed to foursquare [search API](https://developer.foursquare.com/docs/api/venues/search) with specific [categoryId](https://developer.foursquare.com/docs/resources/categories) to get following info for each area ( borough that has its own postal code ): \n",
     "\n",
     "- Visible venue: number of intersection within 500m radius within each area. The bigger the better. ( More places with foot traffic, more options for you to choose a place that can attract your customer well ) \n",
-    "- Highly accessible venue: number of public transportation withint 500m radius. The bigger the better. ( Same reason as above: more traffic, more customer, most likely ). The good place should also have a market / Supermarket / grocery store / gourmet ...  in <= 3km nearby. \n",
+    "- Highly accessible venue: number of public transportation within 500m radius. ( Same reason as above: more traffic, more customer, most likely ). The good place should also have a market / Supermarket / grocery store / gourmet ...  in <= 3km nearby. The more of those places exist within the area we're examining, the more likely we'll choose that location. \n",
     "- Parking lot venue: number of parking lot and Hotel/Office category nearby ( As we can deal with them to share their parking service ) , withint 500m radius. Again, bigger better. \n",
     "- Your customer base info in this area: info about places nearby that you can expect customer from ( Eg: Residence, Hotel, Office, MovieTheater, Supermarket, Shopping Mall, College & University...  ) \n",
     "- Competitors nearby: grab info about restaurent of the same type as yours ( for example, Asian food ) in each area. Based on the number / distribution of our competitor, we can decide about strategic steps then. \n",
-    "\n",
-    "All the info about Foursquare venue category can be found [here](https://developer.foursquare.com/docs/resources/categories) \n",
+    " \n",
     "\n",
     "Base on the data mentioned above, we can run a classification model to divide Toronto borough into different types based on their \"suitable level\" of being our restaurant location. \n",
     "Most likely that the location that can satisfy all our factors will have high cost or even ran out of available place for rent. Classify them well will give us more options to choose to fit our initial budget."
